// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/popconfirm/demo/basic.md correctly 1`] = `
<div
  id="TriggerContainer"
>
  <a
    href="#"
  >
    Delete
  </a>
</div>
`;

exports[`renders ./components/popconfirm/demo/dynamic-trigger.md correctly 1`] = `
<div>
  <div
    id="TriggerContainer"
  >
    <a
      href="#"
    >
      Delete a task
    </a>
  </div>
  <br />
  <br />
  Whether directly execute：
  <span
    class="ant-switch ant-switch-checked"
    tabindex="0"
  >
    <span
      class="ant-switch-inner"
    />
  </span>
</div>
`;

exports[`renders ./components/popconfirm/demo/locale.md correctly 1`] = `
<div
  id="TriggerContainer"
>
  <a
    href="#"
  >
    Delete
  </a>
</div>
`;

exports[`renders ./components/popconfirm/demo/placement.md correctly 1`] = `
<div
  class="demo"
>
  <div
    style="margin-left:70px;white-space:nowrap;"
  >
    <div
      id="TriggerContainer"
    >
      <button
        class="ant-btn"
        type="button"
      >
        <span>
          TL
        </span>
      </button>
    </div>
    <div
      id="TriggerContainer"
    >
      <button
        class="ant-btn"
        type="button"
      >
        <span>
          Top
        </span>
      </button>
    </div>
    <div
      id="TriggerContainer"
    >
      <button
        class="ant-btn"
        type="button"
      >
        <span>
          TR
        </span>
      </button>
    </div>
  </div>
  <div
    style="width:70px;float:left;"
  >
    <div
      id="TriggerContainer"
    >
      <button
        class="ant-btn"
        type="button"
      >
        <span>
          LT
        </span>
      </button>
    </div>
    <div
      id="TriggerContainer"
    >
      <button
        class="ant-btn"
        type="button"
      >
        <span>
          Left
        </span>
      </button>
    </div>
    <div
      id="TriggerContainer"
    >
      <button
        class="ant-btn"
        type="button"
      >
        <span>
          LB
        </span>
      </button>
    </div>
  </div>
  <div
    style="width:70px;margin-left:304px;"
  >
    <div
      id="TriggerContainer"
    >
      <button
        class="ant-btn"
        type="button"
      >
        <span>
          RT
        </span>
      </button>
    </div>
    <div
      id="TriggerContainer"
    >
      <button
        class="ant-btn"
        type="button"
      >
        <span>
          Right
        </span>
      </button>
    </div>
    <div
      id="TriggerContainer"
    >
      <button
        class="ant-btn"
        type="button"
      >
        <span>
          RB
        </span>
      </button>
    </div>
  </div>
  <div
    style="margin-left:70px;clear:both;white-space:nowrap;"
  >
    <div
      id="TriggerContainer"
    >
      <button
        class="ant-btn"
        type="button"
      >
        <span>
          BL
        </span>
      </button>
    </div>
    <div
      id="TriggerContainer"
    >
      <button
        class="ant-btn"
        type="button"
      >
        <span>
          Bottom
        </span>
      </button>
    </div>
    <div
      id="TriggerContainer"
    >
      <button
        class="ant-btn"
        type="button"
      >
        <span>
          BR
        </span>
      </button>
    </div>
  </div>
</div>
`;
